@@ -1,5 +1,5 @@
 '''
-   Copyright 2016 Dustin Roeder (dmroeder@gmail.com)   
+   Copyright 2017 Dustin Roeder (dmroeder@gmail.com)   
 
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
