@@ -1,3 +1,6 @@
+10/06/17
+  -Added Micro8xx support
+  
 10/05/17
   -Added array writing
   -Forward Open/Close cleanup
